--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -7,26 +7,17 @@
     tools:context=".Community">
 
 
+
+
     <devs.mulham.horizontalcalendar.HorizontalCalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/purple_700"
+        android:background="@color/colorPrimary"
+        app:selectorColor="@color/white"
         app:textColorSelected="#FFFF"/>
-
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/calendarView"
-        android:id="@+id/date_CoursesFrag"
-        android:text="Heute-28 June"
-        android:layout_marginTop="20dp"
-        />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -34,16 +25,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/calendarView"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
+
         app:layout_constraintRight_toRightOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@id/date_CoursesFrag"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView"
         app:layout_constraintVertical_bias="1.0" />
-
 
 
 
