--- a/app/src/main/res/layout/fragment_q_r_camera.xml
+++ b/app/src/main/res/layout/fragment_q_r_camera.xml
@@ -7,14 +7,14 @@
     tools:context=".QRCamera">
 
     <com.budiyev.android.codescanner.CodeScannerView
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
         android:id="@+id/scanner_view"
+        android:layout_width="match_parent"
+        android:layout_height="518dp"
         app:autoFocusButtonColor="@android:color/white"
         app:autoFocusButtonVisible="true"
         app:flashButtonColor="@android:color/white"
         app:flashButtonVisible="true"
-        app:maskColor="#6C000000"/>#
+        app:maskColor="#6C000000" />#
 
     <TextView
         android:id="@+id/tv_textView"
@@ -25,6 +25,47 @@
         android:layout_margin="20dp"
         android:textColor="@android:color/black"/>
 
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="197dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="3dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:cardUseCompatPadding="true"
+        tools:cardCornerRAdius="5dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/idea"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/idea1"
+                app:layout_constraintBottom_toTopOf="@+id/qrtext"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></ImageView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/qrtext"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Du brauchst Hilfe bei einem Gerät? \nScanne den QR-Code und schau dir eine Video-Anleitung an!"
+            android:textSize="18dp"></TextView>
+
+
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
