--- a/app/src/main/res/layout/fragment_workout1.xml
+++ b/app/src/main/res/layout/fragment_workout1.xml
@@ -27,7 +27,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="20dp"
-            android:text="Add"
+            android:text="Hinzufügen"
             android:id="@+id/btnAdd"/>
     </LinearLayout>
 </LinearLayout>
