--- a/app/src/main/res/layout/anruf_button.xml
+++ b/app/src/main/res/layout/anruf_button.xml
@@ -26,16 +26,17 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginBottom="15dp"
                 android:paddingTop="13dp"
-                android:text="Call us"
+                android:text="Ruf uns an"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
 
         </LinearLayout>
