--- a/app/src/main/res/layout/email_button.xml
+++ b/app/src/main/res/layout/email_button.xml
@@ -32,7 +32,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginBottom="15dp"
                 android:paddingTop="13dp"
-                android:text="Email us"
+                android:text="Schreib uns eine Mail"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
