--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -63,9 +63,8 @@
         android:layout_width="98dp"
         android:layout_height="98dp"
         android:layout_centerHorizontal="true"
-        android:scaleType="centerCrop"
-        android:elevation="15dp"
         android:padding="5dp"
-        android:src="@drawable/model"
+        android:scaleType="centerCrop"
+        android:src="@drawable/cameraa"
         app:shapeAppearanceOverlay="@style/Circular" />
 </RelativeLayout>
