--- a/app/src/main/res/layout/kontakt_page.xml
+++ b/app/src/main/res/layout/kontakt_page.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:text="Profile"
+                android:text="Kontaktiere uns"
                 android:paddingTop="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
