--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -30,7 +30,7 @@
 
     <item
         android:id="@+id/profil"
-        android:title="Vertrag"
+        android:title="Profil"
         android:icon="@drawable/ic_baseline_person_24"/>
 
 </menu>
